2014-02-03 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFStream.c: Initial CFReadStream implementation, generalization
	* Tests/CFStream/write.m: Tests for CFWriteStream
	* Tests/CFStream/read.m: Test for CFReadStream
	* Source/CFError.c: Prevent crash on NULL user dictionary

2014-02-02 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFStream.c: Initial CFWriteStream implementation

2014-01-14 Lubos Dolezel <lubos@dolezel.info>
	* Source/NSBundle.m: Add CFBundleCopyResourcesDirectoryURL

2013-08-11 Lubos Dolezel <lubos@dolezel.info>
	* Source/GSMemory.h: Introduce wrappers for platform-dependent
	memory functions.
	* Source/GSUnicode.c,
	* Source/GSUnicode.h: Add printf-type functions. Not currently used.

2013-08-11 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFBundle.m: Added CFBundleCopyPrivateFrameworksURL and
	CFBundleCopyAuxiliaryExecutableURL
	* Tests/CFLocale/bridge.m: Added the other half of tests, courtesy of
	mahimahi42

2013-08-11 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFString/objc_bridge_from_cf.m: mark -getBytes* tests as hopeful
	* Source/CFBundle.m: CFBundle as a proper CF type

2013-08-10 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFStringEncoding.c: Fixed a crash in
	CFStringGetListOfAvailableEncodings()
	* Source/CFBundle.m: added many (but not all) CFBundle functions

2013-08-08 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFString.c: TFB support in CFStringTransform

2013-08-08 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFString/hash.m: Make the test work on big endian machines
	* Tests/CFString/normalize.m,
	* Source/CFString.c: make CFStringNormalize() work, support TFB

2013-08-06 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFString/hash.m,
	* Source/CFString.c: Always use UTF-16 in CFStringHash()

2013-07-25 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFPropertyList.c: Add some property list writing code.
	* Source/CFRuntime.c,
	* Source/GSPrivate.h: Remove unneeded GSTypeCreateCopy() function.
